# esp32c6-touch

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TOUCH_DRIVER_USAGE.md
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: axs5106l.rs  lib.rs
