[package]
edition = "2024"
name = "display-test"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "display-test"
path = "./src/bin/main.rs"
test = false               # To avoid rust-analyzer error for not finding the test crate
doctest = false
bench = false

[lib]
name = "display_test"
path = "./src/lib.rs"
test = false          # To avoid rust-analyzer error for not finding the test crate
doctest = false
bench = false

[dependencies]
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }
esp-hal = { version = "=1.0.0", features = ["esp32c6", "unstable"] }
esp-backtrace = { version = "0.18.1", features = [
  "panic-handler",
  "esp32c6",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32c6", "log-04"] }

critical-section = "1.2.0"
esp-alloc = "0.9.0"

#Display driver imports
mipidsi = "0.9.0"
embedded-graphics = { version = "0.8.1" }
embedded-hal-bus = { version = "0.3.0" }
embedded-hal = { version = "1.0.0" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
